--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-fileupload": "^0.4.0",
     "express-myconnection": "^1.0.4",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   }
